force-app/main/default/objects/Active_Record_Criteria__c/Active_Record_Criteria__c.object-meta.xml
<CustomObject>
    <description>It defines records&apos; active criteria.</description>
    <label>QA Active Record Criteria</label>
    <nameField>
        <label>Active Record Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Active Record Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>