force-app/main/default/objects/Active_Record_Criteria__c/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <label>Assignment Group</label>
    <referenceTo>Assignment_Group__c</referenceTo>
    <relationshipName>Active_Record_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>