force-app/main/default/objects/Active_Record_Criteria__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>