force-app/main/default/objects/Active_Record_Criteria__c/fields/Load_Calculation_Object_Number__c.field-meta.xml
<CustomField>
    <fullName>Load_Calculation_Object_Number__c</fullName>
    <label>Load Calculation Object Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>