force-app/main/default/objects/Active_Record_Criteria__c/fields/Right_Math_V1_to_V2__c.field-meta.xml
<CustomField>
    <fullName>Right_Math_V1_to_V2__c</fullName>
    <label>Right Math V1 to V2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_Math_Operators</valueSetName>
    </valueSet>
</CustomField>