force-app/main/default/objects/Active_Record_Criteria__c/fields/Right_Value2__c.field-meta.xml
<CustomField>
    <fullName>Right_Value2__c</fullName>
    <label>Right Value2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>